api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  namespace: edp-reference
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api
---
